# Chrysalis

./: .gitignore  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  publish-docs.yml
chrysalis/: __init__.py
chrysalis/_internal/: _controller.py  _controller_test.py  _engine.py  _engine_test.py  _relation.py  _search.py  _search_test.py  _tables.py  _writer.py  _writer_test.py  conftest.py  controller.py  engine.py  engine_test.py  relation.py  relation_test.py  search.py  search_test.py  tables.py  tables_test.py
chrysalis/_internal/tables/: defs.py
docs/source/: api.rst  concepts.rst  conf.py  contributing.rst  getting-started.rst  index.rst  relational-model.rst
scripts/: build_docs.sh  format_and_check.sh
tests_integration/sql/: __main__.py  transformations.py
