[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chrysalis-test"
version = "0.1.0"
description = 'A metamorphic testing framework for Python'
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "Nathan Huey", email = "nathanhuey44@gmail.com" },
  { name = "Jai Parera", email = "jaiparera@gmail.com" },
]
dependencies = ["pytest>=8.0.0", "duckdb>=1.2.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["chrysalis*"]

[dependency-groups]
dev = ["mypy>=1.17.1", "ruff>=0.12.11"]
